# loop-sense

./: .gitignore  Cargo.toml  README.md  build.rs  compose.yaml  db-sample  flake.nix  justfile  measurement_id.lp  rust-toolchain.toml  sensor_data.lp  sequence.lp  test_measurement_data.lp
data/: loop-sense.excalidraw  mockloop_architecture.excalidraw
nixos/resources/: build-arm64-images.sh  influxdb-images-arm64.tar  influxdb-images.tar  ssh_public_keys.nix
nixos/rpi3/: compose.yaml  default.nix  influxdb.nix  loop-sense.nix  network.nix  pkgs.nix  ssh.nix  uart.nix  user.nix  virt.nix
nixos/rpi4/: compose.yaml  default.nix  heart-os.nix  influxdb.nix  loop-sense.nix  network.nix  pkgs.nix  ssh.nix  uart.nix  user.nix  virt.nix
snapshot/: restore-volume.sh
src/: communication_task.rs  control_loop_task.rs  controller.rs  db.rs  db_communication_task.rs  hardware.rs  http.rs  lib.rs  main.rs  micro_communication_task.rs  nidaq.rs
src/appstate/: mod.rs
src/axumstate/: mod.rs
src/communicator/: mockloop_communicator.rs  mod.rs  passthrough.rs  sim.rs  uart.rs
src/control/: controller.rs  mod.rs
src/controller/: mockloop_controller.rs  mod.rs
src/controller/backend/: mockloop_hardware.rs  mod.rs  nidaq.rs  sim.rs
src/database/: db_communication_task.rs  mod.rs  query.rs  record.rs  secrets.rs
src/experiment/: manage.rs  manage_experiments.rs  mod.rs
src/http/: get.rs  messages.rs  mod.rs  post.rs  ws.rs
src/messages/: db_messages.rs  frontend_messages.rs  mod.rs
src/nidaq/: channel.rs  mod.rs  nidaq_sys.rs
src/nidaq/bindings/: mod.rs  nidaqmx_bindings.rs
tests/: integration.rs
