[package]
name = "loop_sense"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uom = { version = "0.37.0", features = ["serde"] }

[dev-dependencies]
axum = "0.8.4"
hyper = "1.6.0"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
